rendered/envs/friclu/catchat/deployment-fabric-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fabric
    component: ui
  name: fabric-ui
  namespace: catchat
spec:
  replicas: null
  selector:
    matchLabels:
      app: fabric
      component: ui
  template:
    metadata:
      annotations:
        checksum/app-js: a2df3558de87e64dc2c103d8b799b2879388484355705a28670a560249d961c5
        checksum/index-html: 5f2f875007995aa6cd8257d7e4ee2c2183a49caebf97fe03b831aa3bbc1b7ce9
        checksum/lib-js: 089bc1ad62c2433ac4899b8effda1cd563eb67fa33ff0df8ee001b16990b3cc8
        checksum/service-worker-js: defaa6683c6f8b0a62de0b14b6528484344695f078aafc62685d3af6af4386bb
      labels:
        app: fabric
        component: ui
    spec:
      containers:
        - image: ghcr.io/fritzduchardt/fabric-ui:master
          imagePullPolicy: Always
          name: fabric-ui
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html/app.js
              name: ui-scripts
              subPath: app.js
            - mountPath: /usr/share/nginx/html/lib.js
              name: ui-scripts
              subPath: lib.js
            - mountPath: /usr/share/nginx/html/index.html
              name: ui-scripts
              subPath: index.html
            - mountPath: /usr/share/nginx/html/manifest.json
              name: ui-scripts
              subPath: manifest.json
            - mountPath: /usr/share/nginx/html/service-worker.js
              name: ui-scripts
              subPath: service-worker.js
            - mountPath: /etc/nginx/nginx.conf
              name: ui-nginx-config
              subPath: nginx.conf
      volumes:
        - configMap:
            defaultMode: 420
            name: fabric-ui-scripts
          name: ui-scripts
        - configMap:
            defaultMode: 420
            name: fabric-ui-nginx-config
          name: ui-nginx-config
