rendered/envs/friclu/catchat/service-fabric-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fabric
    component: backend
  name: fabric-backend
  namespace: catchat
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: fabric
    component: backend
  type: ClusterIP
