rendered/envs/friclu/catchat/service-fabric-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fabric
    component: ui
  name: fabric-ui
  namespace: catchat
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: fabric
    component: ui
  type: ClusterIP
